modules/libpref/init/all.js
@@ -2313,6 +2313,11 @@ pref("layout.css.prefixes.gradients", true);
 // Are webkit-prefixed properties & property-values supported?
 pref("layout.css.prefixes.webkit", true);
 
+// Are "-webkit-{min|max}-device-pixel-ratio" media queries supported?
+// (Note: this pref has no effect if the master 'layout.css.prefixes.webkit'
+// pref is set to false.)
+pref("layout.css.prefixes.device-pixel-ratio-webkit", false);
+
 // Is the CSS Unprefixing Service enabled? (This service emulates support
 // for certain vendor-prefixed properties & values, for sites on a "fixlist".)
 pref("layout.css.unprefixing-service.enabled", true);
